/*
 * (#)build.gradle  0.1.0   05/28/2025
 *
 * @author   Jonathan Parker
 * @version  0.1.0
 * @since    0.1.0
 *
 * MIT License
 *
 * Copyright (c) 2025 Jonathan M. Parker
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

/*
 * The following system property must be set in HOME/.gradle/gradle.properties:
 *   systemProp.macosArchitecture=intel -or-
 *   systemProp.macosArchitecture=silicon
 */

plugins {
	id 'java'
	id 'net.jmp.gradle.plugin.projectinfo-info'	version '0.1.0'
}

apply plugin: 'net.jmp.gradle.plugin.projectinfo-info'

ext {
	cohereApiKey = 'etc/cohere-api-key.txt'
	embeddingModel = 'all-MiniLM-L6-v2'
	enableNativeAccess = '--enable-native-access=ALL-UNNAMED'
	indexName = 'langchain'
	javaMainClass = 'net.jmp.pinecone.langchain.Main'
	mongoDbCollection = 'quickstart'
	mongoDbName = 'pinecone_quickstart'
	mongoDbUri = 'etc/mongo-db-uri.txt'
	namespace = 'langchain-namespace'
	openaiApiKey = 'etc/open-ai-api-key.txt'
	pineconeApiKey = 'etc/pinecone-api-key.txt'
	project.group = 'net.jmp.pinecone.langchain'
	project.version = '0.1.0'
	project.description = 'to demonstrate Pinecone using LangChain.'
	rerankingModel = 'bge-reranker-v2-m3'
	queryTextForFilter = 'Tell me about famous persons in history and science'
	queryTextNoFilter = 'Tell me about famous monuments and historical structures'
	tavilyApiKey = 'etc/tavily-api-key.txt'
	useAssertions = '--enable-assertions'
}

java.sourceCompatibility = JavaVersion.VERSION_24

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
	implementation		(libs.bundles.langchain4j)
	implementation		(libs.bundles.logging)
	implementation		(libs.org.mongodb.mongodb.driver.sync)

	runtimeOnly			(libs.bundles.logging.runtime)

	testRuntimeOnly		('org.junit.platform:junit-platform-launcher')
}

tasks.compileJava {
    options.forkOptions.jvmArgs = ["-Xmx8192m", "--enable-native-access=ALL-UNNAMED"]
}

tasks.withType(Javadoc).configureEach {
    CoreJavadocOptions cjo = options as CoreJavadocOptions
    StandardJavadocDocletOptions sjdo = options as StandardJavadocDocletOptions

    cjo.encoding("UTF-8")
    cjo.addStringOption("source", "24")
    cjo.memberLevel = JavadocMemberLevel.PRIVATE

    sjdo.version(true)
}

/*
 * Execute with - gradle execute instead of gradle run
 */

tasks.register('delete', JavaExec) {
	allJvmArgs = [useAssertions, enableNativeAccess] as List<String>
	systemProperties(
			['app.embeddingModel': embeddingModel,
			 'app.indexName': indexName,
			 'app.namespace': namespace,
			 'app.pineconeApiKey': pineconeApiKey,
			 'app.operation': 'delete']
	)
	classpath = sourceSets.main.runtimeClasspath
	javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
	mainClass = javaMainClass
}

tasks.register('load', JavaExec) {
	allJvmArgs = [useAssertions, enableNativeAccess] as List<String>
	systemProperties(
			['app.embeddingModel': embeddingModel,
			 'app.indexName': indexName,
        	 'app.mongoDbCollection': mongoDbCollection,
			 'app.mongoDbName': mongoDbName,
			 'app.mongoDbUri': mongoDbUri,
			 'app.namespace': namespace,
			 'app.pineconeApiKey': pineconeApiKey,
			 'app.operation': 'load']
	)
	classpath = sourceSets.main.runtimeClasspath
	javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
	mainClass = javaMainClass
}

tasks.register('query-filtered', JavaExec) {
	allJvmArgs = [useAssertions, enableNativeAccess] as List<String>
	systemProperties(
			['app.embeddingModel': embeddingModel,
			 'app.indexName': indexName,
			 'app.namespace': namespace,
			 'app.pineconeApiKey': pineconeApiKey,
			 'app.queryText': queryTextForFilter,
			 'app.operation': 'query-filtered']
	)
	classpath = sourceSets.main.runtimeClasspath
	javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
	mainClass = javaMainClass
}

tasks.register('query-unfiltered', JavaExec) {
	allJvmArgs = [useAssertions, enableNativeAccess] as List<String>
	systemProperties(
			['app.embeddingModel': embeddingModel,
			 'app.indexName': indexName,
			 'app.namespace': namespace,
			 'app.pineconeApiKey': pineconeApiKey,
			 'app.queryText': queryTextNoFilter,
			 'app.operation': 'query-unfiltered']
	)
	classpath = sourceSets.main.runtimeClasspath
	javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
	mainClass = javaMainClass
}

tasks.register('rag', JavaExec) {
	allJvmArgs = [useAssertions, enableNativeAccess] as List<String>
	systemProperties(
			['app.cohereApiKey': cohereApiKey,
			 'app.embeddingModel': embeddingModel,
			 'app.indexName': indexName,
			 'app.namespace': namespace,
			 'app.openaiApiKey': openaiApiKey,
			 'app.pineconeApiKey': pineconeApiKey,
			 'app.queryText': queryTextForFilter,
			 'app.operation': 'rag']
	)
	classpath = sourceSets.main.runtimeClasspath
	javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
	mainClass = javaMainClass
}

tasks.register('structuredoutput', JavaExec) {
	allJvmArgs = [useAssertions, enableNativeAccess] as List<String>
	systemProperties(
			['app.openaiApiKey': openaiApiKey,
			 'app.operation': 'structuredoutput']
	)
	classpath = sourceSets.main.runtimeClasspath
	javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
	mainClass = javaMainClass
}

// RAG tasks

tasks.register("easyrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "easyrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("metadatarag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "metadatarag")
		}
	}

	finalizedBy("rag")
}

tasks.register("metadatafilteringrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "metadatafilteringrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("multipleretrieversrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "multipleretrieversrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("naiverag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "naiverag")
		}
	}

	finalizedBy("rag")
}

tasks.register("querycompressionrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "querycompressionrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("queryroutingrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "queryroutingrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("rerankingrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "rerankingrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("returnsourcesrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "returnsourcesrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("skipretrievalrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "skipretrievalrag")
		}
	}

	finalizedBy("rag")
}

tasks.register("websearchrag") {
	doFirst {
		tasks.rag.configure {
			systemProperty("app.operation", "websearchrag")
			systemProperty("app.tavilyApiKey", tavilyApiKey)
		}
	}

	finalizedBy("rag")
}
